--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "yes",
   "version": "1.0.0",
-  "description": "",
   "main": "j-son.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,5 +17,6 @@
   "homepage": "https://github.com/LeticiaGiVi/2tri_AC1-webdesing#readme",
   "dependencies": {
     "json-server": "^0.17.3"
-  }
+  },
+  "description": ""
 }
